# restapiboys

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
example/src/: .env  config.yaml  gunicorn_environ.py  types.yaml
example/src/endpoints/: __default__.yaml  __disabled--quizzes--disabled__.yaml  courses.py  events.yaml  grades.yaml  homework.yaml  notes.yaml  quizzes.yaml  schedule-mutations.yaml  settings.yaml  subjects.yaml  users.yaml
example/src/functions/: utils.py  validators.py
restapiboys/: config.py  database.py  directives.py  endpoints.py  fields.py  http.py  log.py  server.py  types.py  utils.py  validation.py
restapiboys/cli/: index.py  logger.py  manage_db.py  start.py
restapiboys/custom_routes/: decorators.py
restapiboys_old/: cli.py  config.py  fields.py  http.py  logger.py  routes.py  utils.py  validators.py
restapiboys_old/cli_commands/: start.py
schemas/: endpoint.schema.json
tests/: test_database.py  test_fields.py
